add: dockerfile videos for demos folder

--- a/zadanie-1/Dockerfile
+++ b/zadanie-1/Dockerfile
@@ -10,39 +10,32 @@ RUN apt-get update && \
     curl \
     zip \
     unzip \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    zlib1g-dev \
     && apt-get clean
 
 # Instalacja Pythona 3.8
-RUN add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update && \
-    apt-get install -y python3.8
+RUN cd /usr/src && \
+    wget https://www.python.org/ftp/python/3.8.10/Python-3.8.10.tgz && \
+    tar xzf Python-3.8.10.tgz && \
+    cd Python-3.8.10 && \
+    ./configure --enable-optimizations && \
+    make altinstall
 
 # Instalacja OpenJDK 8
-RUN apt-get update && \
-    apt-get install -y openjdk-8-jdk
+RUN apt-get install -y openjdk-8-jdk
 
-# Instalacja Kotlina
-RUN apt-get install -y kotlin
-# Utwórz plik build.txt z wersją Kotlina
-RUN echo "1.5.31" > /usr/share/kotlin/kotlinc/build.txt
+# Instalacja Kotlin
+RUN wget -O kotlin-compiler.zip https://github.com/JetBrains/kotlin/releases/download/v1.5.31/kotlin-compiler-1.5.31.zip && \
+    unzip kotlin-compiler.zip -d /opt && \
+    rm kotlin-compiler.zip
 
-# Instalacja Gradle
-RUN wget https://services.gradle.org/distributions/gradle-7.3.3-bin.zip -P /tmp && \
-    unzip -d /opt/gradle /tmp/gradle-*.zip && \
-    rm -f /tmp/gradle-*.zip
-
-# Utwórz projekt Gradle
-RUN mkdir -p /home/dbarszcz/ebiznes
-WORKDIR /home/dbarszcz/ebiznes
-RUN /opt/gradle/gradle-*/bin/gradle init --type java-application
-
-# Dodaj paczkę JDBC SQLite do pliku build.gradle
-RUN echo 'implementation "org.xerial:sqlite-jdbc:3.34.0"' >> build.gradle
-
-RUN useradd -ms /bin/bash/ dbarszcz
-RUN adduser dbarszcz sudo 
+RUN useradd -ms /bin/bash dbarszcz
+RUN adduser dbarszcz sudo
 
 USER dbarszcz
 WORKDIR /home/dbarszcz/ebiznes
 
-CMD bash -c "python3 --version && java -version && cd / && kotlin -version && /opt/gradle/gradle-*/bin/gradle --version && cat build.gradle"
+CMD bash -c "python3.8 --version && java -version && /opt/kotlinc/bin/kotlinc -version"
