update: sonar-project.properties (repair sonar.exclusions)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.organization=damianbarszcz
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
 sonar.token=e5708ad083bdf92bf290e66c6b9697df58c1e939
-sonar.exclusions=zadanie-1/**,zadanie-2/**,zadanie-3/**,zadanie-4/**,zadanie-5/**,zadanie-6/**,/**,zadanie-8/**,zadanie-9/**,zadanie-10/**
+sonar.exclusions=zadanie-1/**,zadanie-2/**,zadanie-3/**,zadanie-4/**,zadanie-5/**,zadanie-6/**,zadanie-8/**,zadanie-9/**,zadanie-10/**
